# CS171-Final

./: .gitignore  CMakeLists.txt  Group2.pptx  README.md
include/: accel.h  camera.h  defines.h  geometry.h  grid.h  interaction.h  intersection.h  mesh.h  ray.h  scene.h  shader.h  utils.h
report/: report.aux  report.tex
shader/: fur.fshader  fur.gshader  lightsource.fshader  lightsource.vshader  model.fshader  model.gshader  object.fshader  object.vshader
src/: accel.cpp  camera.cpp  geometry.cpp  grid.cpp  main.cpp  mesh.cpp  scene.cpp  shader.cpp  utils.cpp
